[gd_scene load_steps=5 format=2]

[ext_resource path="res://EnemyHP.gd" type="Script" id=1]
[ext_resource path="res://healthbar-back.png" type="Texture" id=2]
[ext_resource path="res://healthbar-progress.png" type="Texture" id=3]
[ext_resource path="res://healthbar-over.png" type="Texture" id=4]

[node name="EnemyHP" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="HealthUnder" type="TextureProgress" parent="."]
margin_right = 200.0
margin_bottom = 40.0
texture_under = ExtResource( 2 )
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 3 )
tint_progress = Color( 1, 0, 0, 1 )

[node name="HealthOver" type="TextureProgress" parent="."]
margin_right = 200.0
margin_bottom = 28.0
texture_under = ExtResource( 2 )
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 3 )
tint_progress = Color( 1, 0, 0, 1 )

[node name="UpdateTween" type="Tween" parent="."]
